# web_12

./: main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 2eb27aaad5a4_init.py  3c2d5095e224_.py  5865f0ec8b6d_.py  a2ad566d7489_user.py  eddf72579b47_.py
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  birthdays.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: test.db  test_unit_repository_contacts.py  test_unit_repository_users.py
